# s3-index

./: .gitignore  .rules  README.md  pyproject.toml  pytest.ini
scripts/: format.sh  test.sh
src/s3_index/: __init__.py  version.py
src/s3_index/cli/: app.py
src/s3_index/db/: operations.py
src/s3_index/s3/: operations.py
tests/: conftest.py
tests/integration/: test_app.py
tests/unit/: test_cli.py  test_db_operations.py  test_s3_operations.py
