[project]
name = "s3-index"
version = "0.1.0"
description = "CLI tool to index S3 keys in SQLite for fast searching"
readme = "README.md"
authors = [
    { name = "Bruno Souza", email = "brnosouza@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.40.14",
    "typer>=0.9.0",
    "rich>=13.7.0",
]

[project.scripts]
s3-index = "s3_index:main"

[build-system]
requires = ["uv_build>=0.7.20,<0.8"]
build-backend = "uv_build"

[tool.ruff]
target-version = "py313"
line-length = 100
indent-width = 4
src = ["src"]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "F",  # pyflakes
    "I",  # isort
    "UP", # pyupgrade
    "N",  # pep8-naming
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "RET", # flake8-return
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking
    "TID", # flake8-tidy-imports
    "ERA", # eradicate
]
ignore = ["UP043"]  # Allow typing imports and full Generator type parameters

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[dependency-groups]
dev = [
    "moto>=5.1.10",
    "pytest>=8.4.1",
    "ruff>=0.12.9",
]

[tool.ruff.lint.isort]
known-first-party = ["s3_index"]
